--- a/airbnb/src/app/tab4/tab4.page.html
+++ b/airbnb/src/app/tab4/tab4.page.html
@@ -7,4 +7,20 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-list>Explore Trips:</ion-list>
+  <div padding>
+      <ion-button expand="full" (click)="navToExplore()">Explore Homes</ion-button>
+  </div>
+
+
+    <ion-list>
+      <ion-item> 
+        <ion-label>   Current Trip: </ion-label>
+        <ion-button expand="full" (click)="navToExploreCurrent()">Lisbon, Portugal</ion-button>
+      </ion-item>
+    </ion-list>
+     
+
+
+</ion-content>
