--- a/airbnb/src/app/home/home.page.html
+++ b/airbnb/src/app/home/home.page.html
@@ -1,4 +1,8 @@
-<ion-content color="primary" padding>
+<ion-content color="light" padding>
+
+    <ion-card>
+        <ion-img src="https://blog.gohouse.com.br/wp-content/uploads/2018/09/Airbnb-Logo.png"></ion-img>
+      </ion-card>
   <form #form="ngForm" (ngSubmit)="login(form)">
     <ion-grid>
       <ion-row color="primary" justify-content-center>
