--- a/airbnb/src/app/rental-details/rental-details.page.html
+++ b/airbnb/src/app/rental-details/rental-details.page.html
@@ -2,8 +2,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="tabs"></ion-back-button>
     </ion-buttons>
-    <ion-title>Current Rental Details</ion-title>
+    <ion-title>Rental Details</ion-title>
   </ion-toolbar>
-</ion-header>
 
 <ion-content></ion-content>
