--- a/airbnb/src/app/tab1/tab1.page.scss
+++ b/airbnb/src/app/tab1/tab1.page.scss
@@ -1,4 +1,6 @@
-.welcome-card ion-img {
-  max-height: 35vh;
-  overflow: hidden;
+ion-card{
+  display: flex;
+  flex-direction: column;
+  width: 30% !important;
+  margin: 0 !important;
 }
