--- a/airbnb/src/app/tab2/tab2.page.html
+++ b/airbnb/src/app/tab2/tab2.page.html
@@ -10,12 +10,28 @@
   
   <ion-content>
     <ion-list>
-        <ion-item>
-            <ion-avatar>
+        <ion-item> 
+            <ion-avatar slot="start" size="small">
               <img src ="https://scontent.fopo2-2.fna.fbcdn.net/v/t1.0-9/51221242_1018810211649656_3534067690090004480_n.jpg?_nc_cat=104&_nc_ht=scontent.fopo2-2.fna&oh=d41a1647e7cce4d8598645b9ed7945f5&oe=5D8E898E" alt="Sarah Kunkel">
             </ion-avatar>
-            Hi, I'm Sarah Kunkel
-          </ion-item>
+            <b> Hi, I'm Sarah Kunkel</b>
+         </ion-item>
+
+          <div padding>
+            </div>
+        
+           <ion-item> 
+              <b> About </b>
+           </ion-item>
+           <ion-item>
+              <ion-icon name="home"></ion-icon>
+              <p>Lives in Nashville, Tennessee </p>
+              <ion-icon name="checkmark-circle-outline"></ion-icon>
+              <p> Verified</p>
+           </ion-item> 
+           
+
+          
         <ion-item>
           <ion-label>About</ion-label>
           Lives in Nashville, Tennessee
