--- a/airbnb/src/app/tabs/tabs.page.html
+++ b/airbnb/src/app/tabs/tabs.page.html
@@ -17,12 +17,12 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab4">
-      <ion-icon name="send"></ion-icon>
+      <ion-icon name="airplane"></ion-icon>
       <ion-label>Trips</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab5">
-      <ion-icon name="send"></ion-icon>
+      <ion-icon name="checkmark-circle-outline"></ion-icon>
       <ion-label>Saved</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
