--- a/airbnb/src/app/tab4/tab4.page.scss
+++ b/airbnb/src/app/tab4/tab4.page.scss
@@ -1,6 +1,7 @@
 ion-card{
     display: flex;
     flex-direction: column;
-    width: 30% !important;
+    width: 60% !important;
     margin: 0 !important;
+    vertical-align: middle;
   }
