--- a/airbnb/src/app/tab2/tab2.page.html
+++ b/airbnb/src/app/tab2/tab2.page.html
@@ -12,40 +12,20 @@
     <ion-list>
         <ion-item> 
             <ion-avatar slot="start" size="small">
-              <img src ="https://scontent.fopo2-2.fna.fbcdn.net/v/t1.0-9/51221242_1018810211649656_3534067690090004480_n.jpg?_nc_cat=104&_nc_ht=scontent.fopo2-2.fna&oh=d41a1647e7cce4d8598645b9ed7945f5&oe=5D8E898E" alt="Sarah Kunkel">
+              <img src ="http://www.gravatar.com/avatar/3b3be63a4c2a439b013787725dfce802?d=identicon">
             </ion-avatar>
-            <b> Hi, I'm Sarah Kunkel</b>
+            <b> Hi, I'm {{user.name}}</b>
          </ion-item>
-
-          <div padding>
-            </div>
-        
            <ion-item> 
               <b> About </b>
            </ion-item>
-           <ion-item>
-              <ion-icon name="home"></ion-icon>
-              <p>Lives in Nashville, Tennessee </p>
-              <ion-icon name="checkmark-circle-outline"></ion-icon>
-              <p> Verified</p>
-           </ion-item> 
-           
 
-          
-        <ion-item>
-          <ion-label>About</ion-label>
-          Lives in Nashville, Tennessee
-        </ion-item>
-        <ion-item>
-            <ion-label>Bookings Made</ion-label>
-            47
-          </ion-item>
-          <ion-item>
-              <ion-label>Reviews Recieves</ion-label>
-              47
-            </ion-item>
-    </ion-list>
-    
-  
-  
+             <p>  
+               <ion-icon name = "mail"></ion-icon> {{user.email}} <br />
+             <ion-icon name="checkmark-circle-outline"></ion-icon>  Verified </p>
+        
+
+           
+          </ion-list>
+
   </ion-content>
